WIP comparator